@@ -10,21 +10,24 @@ import android.webkit.WebView;
 import android.widget.AbsListView;
 import android.widget.AdapterView;
 import android.widget.TextView;
+import com.baidu.adp.framework.MessageManager;
 import com.baidu.adp.framework.message.CustomMessage;
+import com.baidu.adp.framework.message.CustomResponsedMessage;
 import com.baidu.adp.lib.util.StringUtils;
 import com.baidu.adp.lib.util.j;
 import com.baidu.adp.lib.util.l;
+import com.baidu.ar.util.IoUtils;
 import com.baidu.tbadk.BaseActivity;
 import com.baidu.tbadk.TbConfig;
 import com.baidu.tbadk.core.atomData.ChannelHomeActivityConfig;
 import com.baidu.tbadk.core.atomData.HotTopicActivityConfig;
 import com.baidu.tbadk.core.util.TiebaStatic;
-import com.baidu.tbadk.core.util.al;
-import com.baidu.tbadk.core.util.ax;
+import com.baidu.tbadk.core.util.am;
+import com.baidu.tbadk.core.util.ay;
 import com.baidu.tbadk.coreExtra.view.BaseWebView;
-import com.baidu.tbadk.util.u;
+import com.baidu.tbadk.util.aa;
 import com.baidu.tbadk.util.v;
-import com.baidu.tbadk.util.z;
+import com.baidu.tbadk.util.w;
 import com.baidu.tieba.d;
 import com.baidu.tieba.mainentrance.HotSearchInfoData;
 import com.baidu.tieba.mainentrance.searchSuggestList.SearchListNetMessage;
@@ -34,40 +37,40 @@ import java.util.List;
 import java.util.Map;
 /* loaded from: classes3.dex */
 public class e implements b {
-    private BaseActivity bcK;
-    private String cWR;
-    private d eEj;
-    private boolean eEu = true;
-    private c eEv;
+    private BaseActivity bkU;
+    private String dge;
+    private d ePD;
+    private boolean ePN = true;
+    private c ePO;
     private HotSearchInfoData mHotSearchInfo;
     private View mRootView;
 
     public e(BaseActivity baseActivity) {
-        this.bcK = baseActivity;
+        this.bkU = baseActivity;
         init();
     }
 
     private void init() {
         int i;
         try {
-            this.mRootView = LayoutInflater.from(this.bcK).inflate(d.i.new_home_dialog_search, (ViewGroup) null);
-            this.bcK.setContentView(this.mRootView);
+            this.mRootView = LayoutInflater.from(this.bkU).inflate(d.i.new_home_dialog_search, (ViewGroup) null);
+            this.bkU.setContentView(this.mRootView);
         } catch (Exception e) {
             e.printStackTrace();
-            Map<String, String> aMN = a.aMN();
-            if (aMN != null) {
-                int size = aMN.size();
+            Map<String, String> aRK = a.aRK();
+            if (aRK != null) {
+                int size = aRK.size();
                 int i2 = 0;
-                Iterator<String> it = aMN.keySet().iterator();
+                Iterator<String> it = aRK.keySet().iterator();
                 while (true) {
                     i = i2;
                     if (!it.hasNext()) {
                         break;
                     }
-                    a.oO(it.next());
+                    a.pC(it.next());
                     try {
-                        this.mRootView = LayoutInflater.from(this.bcK).inflate(d.i.new_home_dialog_search, (ViewGroup) null);
-                        this.bcK.setContentView(this.mRootView);
+                        this.mRootView = LayoutInflater.from(this.bkU).inflate(d.i.new_home_dialog_search, (ViewGroup) null);
+                        this.bkU.setContentView(this.mRootView);
                         break;
                     } catch (Exception e2) {
                         e2.printStackTrace();
@@ -75,37 +78,37 @@ public class e implements b {
                     }
                 }
                 if (i == size) {
-                    this.bcK.finish();
+                    this.bkU.finish();
                     return;
                 }
             } else {
-                this.bcK.finish();
+                this.bkU.finish();
                 return;
             }
         }
         if (this.mRootView == null) {
-            this.bcK.finish();
+            this.bkU.finish();
             return;
         }
-        this.eEj = new d(this.mRootView, this.bcK.getPageContext().getPageActivity());
-        this.eEv = new c(this.bcK, this, this.eEj);
-        aNb();
-        aNc();
-        aNd();
-        aMx();
-        aNg();
-        z.a(this.eEj.aMY(), this.bcK.getUniqueId());
-        z.a(this.eEj.aMZ(), this.bcK.getUniqueId());
+        this.ePD = new d(this.mRootView, this.bkU.getPageContext().getPageActivity());
+        this.ePO = new c(this.bkU, this, this.ePD);
+        aRY();
+        aRZ();
+        aSa();
+        aRu();
+        aSd();
+        aa.a(this.ePD.aRV(), this.bkU.getUniqueId());
+        aa.a(this.ePD.aRW(), this.bkU.getUniqueId());
     }
 
-    public void aNb() {
+    public void aRY() {
         View.OnFocusChangeListener onFocusChangeListener = new View.OnFocusChangeListener() { // from class: com.baidu.tieba.mainentrance.a.e.1
             @Override // android.view.View.OnFocusChangeListener
-            public void onFocusChange(View view2, boolean z) {
+            public void onFocusChange(View view, boolean z) {
                 if (!z) {
-                    l.b(e.this.bcK.getPageContext().getPageActivity(), view2);
+                    l.b(e.this.bkU.getPageContext().getPageActivity(), view);
                 } else {
-                    e.this.aNf();
+                    e.this.aSc();
                 }
             }
         };
@@ -113,12 +116,12 @@ public class e implements b {
             @Override // android.widget.TextView.OnEditorActionListener
             public boolean onEditorAction(TextView textView, int i, KeyEvent keyEvent) {
                 if (i == 3) {
-                    if (StringUtils.isNull(e.this.cWR)) {
-                        l.b(e.this.bcK.getPageContext().getPageActivity(), textView);
-                        e.this.aNe();
+                    if (StringUtils.isNull(e.this.dge)) {
+                        l.b(e.this.bkU.getPageContext().getPageActivity(), textView);
+                        e.this.aSb();
                     } else {
-                        e.this.H(e.this.cWR, false);
-                        TiebaStatic.log(new al("c12842").ac("obj_name", e.this.cWR).ac(ChannelHomeActivityConfig.PARAM_OBJ_SOURCE, "1").ac("obj_type", "1"));
+                        e.this.H(e.this.dge, false);
+                        TiebaStatic.log(new am("c12842").ah("obj_name", e.this.dge).ah(ChannelHomeActivityConfig.PARAM_OBJ_SOURCE, "1").ah("obj_type", "1"));
                     }
                     return true;
                 }
@@ -137,49 +140,55 @@ public class e implements b {
             @Override // android.text.TextWatcher
             public void afterTextChanged(Editable editable) {
                 if (editable != null) {
-                    if (e.this.eEu) {
-                        e.this.cWR = editable.toString();
-                        e.this.aNg();
+                    if (e.this.ePN) {
+                        e.this.dge = editable.toString();
+                        e.this.aSd();
                     }
-                    e.this.eEj.gC(!StringUtils.isNull(editable.toString()));
+                    e.this.ePD.gI(!StringUtils.isNull(editable.toString()));
                 }
             }
         };
         View.OnClickListener onClickListener = new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.a.e.5
             @Override // android.view.View.OnClickListener
-            public void onClick(View view2) {
-                if (view2 == e.this.eEj.aMW()) {
-                    e.this.aNf();
-                } else if (view2 == e.this.eEj.aMX()) {
-                    l.b(e.this.bcK.getPageContext().getPageActivity(), e.this.eEj.aMW());
-                    com.baidu.adp.lib.g.e.fw().postDelayed(new Runnable() { // from class: com.baidu.tieba.mainentrance.a.e.5.1
-                        @Override // java.lang.Runnable
-                        public void run() {
-                            e.this.bcK.finish();
-                        }
-                    }, 200L);
+            public void onClick(View view) {
+                if (view != e.this.ePD.aRT() || e.this.ePD.aRT().getText() == null) {
+                    if (view == e.this.ePD.aRU()) {
+                        l.b(e.this.bkU.getPageContext().getPageActivity(), e.this.ePD.aRT());
+                        com.baidu.adp.lib.g.e.im().postDelayed(new Runnable() { // from class: com.baidu.tieba.mainentrance.a.e.5.1
+                            @Override // java.lang.Runnable
+                            public void run() {
+                                e.this.bkU.finish();
+                            }
+                        }, 200L);
+                        return;
+                    }
+                    return;
+                }
+                e.this.dge = e.this.ePD.aRT().getText().toString();
+                if (StringUtils.isNull(e.this.dge)) {
+                    e.this.aRM();
                 }
             }
         };
-        this.eEj.a(onFocusChangeListener);
-        this.eEj.a(onEditorActionListener);
-        this.eEj.d(textWatcher);
-        this.eEj.setOnClickListener(onClickListener);
+        this.ePD.a(onFocusChangeListener);
+        this.ePD.a(onEditorActionListener);
+        this.ePD.d(textWatcher);
+        this.ePD.setOnClickListener(onClickListener);
     }
 
-    private void aNc() {
+    private void aRZ() {
         AdapterView.OnItemClickListener onItemClickListener = new AdapterView.OnItemClickListener() { // from class: com.baidu.tieba.mainentrance.a.e.6
             /* JADX WARN: Type inference failed for: r0v0, types: [android.widget.Adapter] */
             @Override // android.widget.AdapterView.OnItemClickListener
-            public void onItemClick(AdapterView<?> adapterView, View view2, int i, long j) {
+            public void onItemClick(AdapterView<?> adapterView, View view, int i, long j) {
                 ?? adapter = adapterView.getAdapter();
                 if (adapter != 0 && i < adapter.getCount()) {
                     Object item = adapter.getItem(i);
                     if (item instanceof String) {
                         String str = (String) item;
                         e.this.H(str, true);
-                        TiebaStatic.eventStat(e.this.bcK.getPageContext().getPageActivity(), "search_bar_result_click", "click", 1, new Object[0]);
-                        TiebaStatic.log(new al("c12842").ac("obj_name", str).ac(ChannelHomeActivityConfig.PARAM_OBJ_SOURCE, "2").ac("obj_type", "1").r("obj_locate", i + 1).ac("obj_param1", e.this.cWR));
+                        TiebaStatic.eventStat(e.this.bkU.getPageContext().getPageActivity(), "search_bar_result_click", "click", 1, new Object[0]);
+                        TiebaStatic.log(new am("c12842").ah("obj_name", str).ah(ChannelHomeActivityConfig.PARAM_OBJ_SOURCE, "2").ah("obj_type", "1").r("obj_locate", i + 1).ah("obj_param1", e.this.dge));
                     }
                 }
             }
@@ -188,7 +197,7 @@ public class e implements b {
             @Override // android.widget.AbsListView.OnScrollListener
             public void onScrollStateChanged(AbsListView absListView, int i) {
                 if (i == 2 || i == 1) {
-                    l.b(e.this.bcK.getPageContext().getPageActivity(), absListView);
+                    l.b(e.this.bkU.getPageContext().getPageActivity(), absListView);
                 }
             }
 
@@ -196,15 +205,15 @@ public class e implements b {
             public void onScroll(AbsListView absListView, int i, int i2, int i3) {
             }
         };
-        this.eEj.c(onItemClickListener);
-        this.eEj.a(onScrollListener);
+        this.ePD.c(onItemClickListener);
+        this.ePD.a(onScrollListener);
     }
 
     public void onChangeSkinType(int i) {
-        this.eEj.onChangeSkinType(this.bcK.getPageContext(), i);
+        this.ePD.onChangeSkinType(this.bkU.getPageContext(), i);
     }
 
-    private void aNd() {
+    private void aSa() {
         BaseWebView.c cVar = new BaseWebView.c() { // from class: com.baidu.tieba.mainentrance.a.e.8
             @Override // com.baidu.tbadk.coreExtra.view.BaseWebView.c
             public void onPageFinished(WebView webView, String str) {
@@ -218,121 +227,123 @@ public class e implements b {
         BaseWebView.b bVar = new BaseWebView.b() { // from class: com.baidu.tieba.mainentrance.a.e.10
             @Override // com.baidu.tbadk.coreExtra.view.BaseWebView.b
             public boolean shouldOverrideUrlLoading(WebView webView, String str) {
-                if (ax.wf().b(e.this.bcK.getPageContext(), new String[]{str}) != 3) {
+                if (ay.zG().b(e.this.bkU.getPageContext(), new String[]{str}) != 3) {
                     return true;
                 }
                 if (str == null || !str.contains("jump=open_full_screen_web_page")) {
                     return false;
                 }
-                ax.wf().a(e.this.bcK.getPageContext(), new String[]{str}, true);
+                ay.zG().a(e.this.bkU.getPageContext(), new String[]{str}, true);
                 return true;
             }
         };
-        this.eEj.a(cVar);
-        this.eEj.a(fVar);
-        this.eEj.a(bVar);
+        this.ePD.a(cVar);
+        this.ePD.a(fVar);
+        this.ePD.a(bVar);
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aNe() {
+    public void aSb() {
         if (this.mHotSearchInfo == null) {
-            this.bcK.showToast(this.bcK.getResources().getString(d.k.write_keyword));
+            this.bkU.showToast(this.bkU.getResources().getString(d.k.write_keyword));
             return;
         }
-        if (this.mHotSearchInfo.aMo() == 0 || this.mHotSearchInfo.aMo() == 2) {
+        if (this.mHotSearchInfo.aRl() == 0 || this.mHotSearchInfo.aRl() == 2) {
             H(this.mHotSearchInfo.getName(), false);
-        } else if (this.mHotSearchInfo.aMo() == 1 && !com.baidu.tbadk.plugins.b.e(this.bcK.getPageContext())) {
-            this.bcK.sendMessage(new CustomMessage(2002001, new HotTopicActivityConfig(this.bcK.getPageContext().getPageActivity()).createNormalConfig(String.valueOf(this.mHotSearchInfo.getId()), this.mHotSearchInfo.getName(), "")));
+        } else if (this.mHotSearchInfo.aRl() == 1 && !com.baidu.tbadk.plugins.b.e(this.bkU.getPageContext())) {
+            this.bkU.sendMessage(new CustomMessage(2002001, new HotTopicActivityConfig(this.bkU.getPageContext().getPageActivity()).createNormalConfig(String.valueOf(this.mHotSearchInfo.getId()), this.mHotSearchInfo.getName(), "4")));
         }
-        TiebaStatic.log(new al("c10355").ac("obj_name", this.mHotSearchInfo.getName()).r("obj_type", this.mHotSearchInfo.aMo() == 0 ? 2 : 1));
+        TiebaStatic.log(new am("c10355").ah("obj_name", this.mHotSearchInfo.getName()).r("obj_type", this.mHotSearchInfo.aRl() == 0 ? 2 : 1));
     }
 
     @Override // com.baidu.tieba.mainentrance.a.b
     public void H(final String str, boolean z) {
-        if (!j.gP()) {
-            this.bcK.showToast(d.k.neterror);
+        if (!j.jD()) {
+            this.bkU.showToast(d.k.neterror);
         } else if (!StringUtils.isNull(str)) {
             if (z) {
-                this.eEu = false;
-                this.eEj.oT(str);
-                this.eEu = true;
+                this.ePN = false;
+                this.ePD.pH(str);
+                this.ePN = true;
             }
-            l.b(this.bcK.getPageContext().getPageActivity(), this.eEj.aMW());
-            this.eEj.aMV();
+            l.b(this.bkU.getPageContext().getPageActivity(), this.ePD.aRT());
+            this.ePD.aRS();
             String str2 = TbConfig.SQUARE_SEARCH_PAGE + str;
             try {
-                str2 = TbConfig.SQUARE_SEARCH_PAGE + URLEncoder.encode(str, "utf-8");
+                str2 = TbConfig.SQUARE_SEARCH_PAGE + URLEncoder.encode(str, IoUtils.UTF_8);
             } catch (Exception e) {
                 e.printStackTrace();
             }
-            this.eEj.aMY().loadUrl(str2);
-            v.a(new u<Boolean>() { // from class: com.baidu.tieba.mainentrance.a.e.2
+            this.ePD.aRV().loadUrl(str2);
+            w.a(new v<Boolean>() { // from class: com.baidu.tieba.mainentrance.a.e.2
                 /* JADX DEBUG: Method merged with bridge method */
                 /* JADX WARN: Can't rename method to resolve collision */
-                @Override // com.baidu.tbadk.util.u
+                @Override // com.baidu.tbadk.util.v
                 public Boolean doInBackground() {
-                    com.baidu.tieba.tbadkCore.util.a.ta(str);
+                    com.baidu.tieba.tbadkCore.util.a.tU(str);
                     return true;
                 }
             }, null);
-            this.eEv.oP(str);
+            this.ePO.pD(str);
+            MessageManager.getInstance().dispatchResponsedMessage(new CustomResponsedMessage(2921345, str));
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aNf() {
-        if (StringUtils.isNull(this.cWR)) {
-            aMP();
-        } else if (!this.eEj.aNa()) {
-            aMC();
+    public void aSc() {
+        if (StringUtils.isNull(this.dge)) {
+            aRM();
+        } else if (!this.ePD.aRX()) {
+            aRz();
         }
     }
 
-    private void aMP() {
-        this.eEv.aMP();
+    /* JADX INFO: Access modifiers changed from: private */
+    public void aRM() {
+        this.ePO.aRM();
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aNg() {
-        if (!StringUtils.isNull(this.cWR)) {
-            aMC();
+    public void aSd() {
+        if (!StringUtils.isNull(this.dge)) {
+            aRz();
         } else {
-            aMP();
+            aRM();
         }
     }
 
-    private void aMC() {
-        if (!StringUtils.isNull(this.cWR)) {
+    private void aRz() {
+        if (!StringUtils.isNull(this.dge)) {
             SearchListNetMessage searchListNetMessage = new SearchListNetMessage();
-            searchListNetMessage.mKey = this.cWR.trim();
-            this.bcK.sendMessage(searchListNetMessage);
+            searchListNetMessage.mKey = this.dge.trim();
+            this.bkU.sendMessage(searchListNetMessage);
         }
     }
 
     public void b(HotSearchInfoData hotSearchInfoData) {
         this.mHotSearchInfo = hotSearchInfoData;
-        aMx();
+        aRu();
     }
 
-    public BaseWebView aNh() {
-        return this.eEj.aMY();
+    public BaseWebView aSe() {
+        return this.ePD.aRV();
     }
 
-    private void aMx() {
+    private void aRu() {
         if (this.mHotSearchInfo == null) {
-            this.eEj.oS(this.bcK.getResources().getString(d.k.search_bar));
+            this.ePD.pG(this.bkU.getResources().getString(d.k.search_bar));
         } else {
-            this.eEj.oS(this.mHotSearchInfo.akw());
+            this.ePD.pG(this.mHotSearchInfo.aoC());
         }
     }
 
-    public void cw(List<String> list) {
-        this.eEj.j(list, this.cWR);
+    public void cB(List<String> list) {
+        this.ePD.j(list, this.dge);
     }
 
     public void onDestroy() {
-        if (this.eEj != null) {
-            this.eEj.onDestroy();
+        if (this.ePD != null) {
+            this.ePD.onDestroy();
         }
     }
 }
